<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <action
        android:id="@+id/action_nav_return_home"
        app:destination="@id/homeFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true"
        />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nabto.edge.nabtoheatpumpdemo.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_devicePageFragment"
            app:destination="@id/device_graph" />
        <action
            android:id="@+id/action_homeFragment_to_pairNewFragment"
            app:destination="@id/pairNewFragment" />
        <action
            android:id="@+id/action_homeFragment_to_appSettingsFragment"
            app:destination="@id/appSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/pairNewFragment"
        android:name="com.nabto.edge.nabtoheatpumpdemo.PairNewFragment"
        android:label="@string/title_pair_new"
        tools:layout="@layout/fragment_pair_new" >
        <action
            android:id="@+id/action_pairNewFragment_to_pairDeviceFragment"
            app:destination="@id/pairDeviceFragment" />
    </fragment>
    <fragment
        android:id="@+id/pairDeviceFragment"
        android:name="com.nabto.edge.nabtoheatpumpdemo.PairDeviceFragment"
        android:label="Pair with {deviceId}">
        <argument android:name="productId"
            app:argType="string" />
        <argument android:name="deviceId"
            app:argType="string" />
        <argument android:name="password"
            app:argType="string" />
        <deepLink
            app:action="ACTION_VIEW"
            app:uri="https://nabto.com/pairing_demo/{productId}/{deviceId}/{password}" />
    </fragment>
    <navigation android:id="@+id/device_graph"
        app:startDestination="@id/devicePageFragment">
        <fragment
            android:id="@+id/devicePageFragment"
            android:name="com.nabto.edge.nabtoheatpumpdemo.DevicePageFragment"
            android:label="{title}"
            tools:layout="@layout/fragment_device_page">
            <argument android:name="title" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/appSettingsFragment"
        android:name="com.nabto.edge.nabtoheatpumpdemo.AppSettingsFragment"
        android:label="@string/title_app_settings"
        tools:layout="@layout/fragment_app_settings" />
</navigation>