<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DevicePageFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/dp_swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/dp_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <LinearLayout
                        android:id="@+id/dp_lost_connection_bar"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:background="@color/red"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_baseline_error_outline"/>

                        <TextView
                            android:id="@+id/dp_lost_connection_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/device_page_lost_connection"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:orientation="vertical">
                        <com.google.android.exoplayer2.ui.StyledPlayerView
                            android:id="@+id/video_player"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:surface_type="surface_view"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/dp_refresh_video"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="refresh video"
                        app:icon="@drawable/ic_baseline_refresh_24"
                        android:layout_marginStart="32dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dip">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/device_page_device_information"
                            android:textColor="?attr/colorPrimaryVariant"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="48dp"
                            android:orientation="horizontal"
                            android:paddingLeft="16dip"
                            android:paddingRight="16dip">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/device_page_app_name" />

                            <TextView
                                android:id="@+id/dp_info_appname"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="48dp"
                            android:orientation="horizontal"
                            android:paddingLeft="16dip"
                            android:paddingRight="16dip">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/device_id" />

                            <TextView
                                android:id="@+id/dp_info_devid"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="48dp"
                            android:orientation="horizontal"
                            android:paddingLeft="16dip"
                            android:paddingRight="16dip">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/product_id" />

                            <TextView
                                android:id="@+id/dp_info_proid"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="48dp"
                            android:orientation="horizontal"
                            android:paddingLeft="16dip"
                            android:paddingRight="16dip">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="RTSP URL" />

                            <TextView
                                android:id="@+id/dp_info_url"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="48dp"
                            android:orientation="horizontal"
                            android:paddingLeft="16dip"
                            android:paddingRight="16dip">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/user_id" />

                            <TextView
                                android:id="@+id/dp_info_userid"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/dp_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>